force-app/main/default/objects/Apttus_Config2__ProductConfiguration__c/Apttus_Config2__ProductConfiguration__c.object-meta.xml
<CustomObject>
    <description>Represents a product configuration</description>
    <label>Product Configuration</label>
    <nameField>
        <label>Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>