force-app/main/default/objects/Apttus_Config2__ProductConfiguration__c/fields/AgentBooking__c.field-meta.xml
<CustomField>
    <fullName>AgentBooking__c</fullName>
    <formula>Apttus_QPConfig__Proposald__r.Agent_Booking__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agent Booking</label>
    <type>Checkbox</type>
</CustomField>