force-app/main/default/objects/Apttus_Config2__ProductConfiguration__c/fields/APTS_Comparative_Quote__c.field-meta.xml
<CustomField>
    <fullName>APTS_Comparative_Quote__c</fullName>
    <formula>Apttus_QPConfig__Proposald__r.ComparativeQuote__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Comparative Quote</label>
    <type>Checkbox</type>
</CustomField>