force-app/main/default/objects/Apttus_Config2__ProductConfiguration__c/fields/APTS_Course_Literature_Business_English__c.field-meta.xml
<CustomField>
    <fullName>APTS_Course_Literature_Business_English__c</fullName>
    <description>Course Literature (Business English) constraint rule</description>
    <label>Total Course Literature Business English</label>
    <summaryFilterItems>
        <field>Apttus_Config2__LineItem__c.Apttus_Config2__Description__c</field>
        <operation>equals</operation>
        <value>Course Literature (Business English)</value>
    </summaryFilterItems>
    <summaryForeignKey>Apttus_Config2__LineItem__c.Apttus_Config2__ConfigurationId__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>