force-app/main/default/objects/Apttus_Config2__ProductConfiguration__c/fields/APTS_SpecialDiet2__c.field-meta.xml
<CustomField>
    <fullName>APTS_SpecialDiet2__c</fullName>
    <formula>Apttus_QPConfig__Proposald__r.APTS_Special_Diet__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Special Diet</label>
    <type>Checkbox</type>
</CustomField>