force-app/main/default/objects/Apttus_Config2__ProductConfiguration__c/fields/APTS_Total_Count_Cancellation_Protection__c.field-meta.xml
<CustomField>
    <fullName>APTS_Total_Count_Cancellation_Protection__c</fullName>
    <description>Total Count Cancellation Protection</description>
    <label>Total Count Cancellation Protection</label>
    <summaryFilterItems>
        <field>Apttus_Config2__LineItem__c.Apttus_Config2__Description__c</field>
        <operation>equals</operation>
        <value>Cancellation Protection</value>
    </summaryFilterItems>
    <summaryForeignKey>Apttus_Config2__LineItem__c.Apttus_Config2__ConfigurationId__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>