force-app/main/default/objects/Apttus_Config2__ProductConfiguration__c/fields/APTS_Total_Count_Enrollment_Fee__c.field-meta.xml
<CustomField>
    <fullName>APTS_Total_Count_Enrollment_Fee__c</fullName>
    <label>Total Count Enrollment Fee</label>
    <summaryFilterItems>
        <field>Apttus_Config2__LineItem__c.Apttus_Config2__Description__c</field>
        <operation>equals</operation>
        <value>Enrollment Fee</value>
    </summaryFilterItems>
    <summaryForeignKey>Apttus_Config2__LineItem__c.Apttus_Config2__ConfigurationId__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>