force-app/main/default/objects/Apttus_Config2__ProductConfiguration__c/fields/APTS_Total_Count_FTEFX__c.field-meta.xml
<CustomField>
    <fullName>APTS_Total_Count_FTEFX__c</fullName>
    <description>Counts the total number of FTEFX Product, is consequently used in a constraint rule.</description>
    <label>Total Count FTEFX</label>
    <summaryFilterItems>
        <field>Apttus_Config2__LineItem__c.Apttus_Config2__Description__c</field>
        <operation>equals</operation>
        <value>Flight Booked by EF (Fixed Fare)</value>
    </summaryFilterItems>
    <summaryForeignKey>Apttus_Config2__LineItem__c.Apttus_Config2__ConfigurationId__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>