force-app/main/default/objects/Apttus_Config2__ProductConfiguration__c/fields/APTS_Total_Course_Weeks__c.field-meta.xml
<CustomField>
    <fullName>APTS_Total_Course_Weeks__c</fullName>
    <description>Rollus up the quantity field on line items of product type = Course</description>
    <label>Total Course Weeks</label>
    <summarizedField>Apttus_Config2__LineItem__c.Apttus_Config2__Quantity__c</summarizedField>
    <summaryFilterItems>
        <field>Apttus_Config2__LineItem__c.APTS_Product_Type__c</field>
        <operation>equals</operation>
        <value>Course</value>
    </summaryFilterItems>
    <summaryForeignKey>Apttus_Config2__LineItem__c.Apttus_Config2__ConfigurationId__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>