force-app/main/default/objects/Apttus_Config2__ProductConfiguration__c/fields/APTSTWTRCourse__c.field-meta.xml
<CustomField>
    <fullName>APTSTWTRCourse__c</fullName>
    <description>Used for constraint rules to define if one is applicable to non-tw/tr courses or to tw/tr courses.</description>
    <formula>TEXT(Apttus_QPConfig__Proposald__r.APTSTWTRCourse__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TW/TR Course</label>
    <type>Text</type>
</CustomField>