force-app/main/default/objects/Apttus_Config2__ProductConfiguration__c/fields/Fixed_Fare_Date__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Fare_Date__c</fullName>
    <description>This field is used to find the Minimum start date of the accommodation type Line Items</description>
    <label>Fixed Fare Date</label>
    <summarizedField>Apttus_Config2__LineItem__c.Apttus_Config2__StartDate__c</summarizedField>
    <summaryFilterItems>
        <field>Apttus_Config2__LineItem__c.APTS_Product_Type__c</field>
        <operation>equals</operation>
        <value>ACCOMMODATION</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Apttus_Config2__LineItem__c.Apttus_Config2__StartDate__c</field>
        <operation>notEqual</operation>
        <value/>
    </summaryFilterItems>
    <summaryForeignKey>Apttus_Config2__LineItem__c.Apttus_Config2__ConfigurationId__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>