force-app/main/default/objects/Apttus_Config2__ProductConfiguration__c/fields/Total_Count_Course_Literature_English__c.field-meta.xml
<CustomField>
    <fullName>Total_Count_Course_Literature_English__c</fullName>
    <description>Course Literature -English</description>
    <label>Total Count Course Literature -English</label>
    <summaryFilterItems>
        <field>Apttus_Config2__LineItem__c.Apttus_Config2__Description__c</field>
        <operation>equals</operation>
        <value>Course Literature English</value>
    </summaryFilterItems>
    <summaryForeignKey>Apttus_Config2__LineItem__c.Apttus_Config2__ConfigurationId__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>